# pearson3curve

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: api.md
example/: nonsuccessive.py  successive.py
src/pearson3curve/: __init__.py  curve.py  data.py  fitting.py  pgfplot.py  plot.py
tests/: test_curve.py  test_data.py  test_data_sequence.py  test_fitting.py
