[project]
name = "pearson3curve"
version = "1.0.0r"
description = "Pearson III curve fitting and plotting"
authors = [{ name = "ListLee", email = "list.lee@outlook.com" }]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "matplotlib>=3.8.3",
    "probscale>=0.2.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/tanukihee/pearson3curve"
Documentation = "https://github.com/tanukihee/pearson3curve/blob/main/docs/api.md"
Repository = "https://github.com/tanukihee/pearson3curve.git"
Issues = "https://github.com/tanukihee/pearson3curve/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.1.1"]
